Fixed project arrow link (Issue: z-index), fixed project item component's spacing

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -25,7 +25,7 @@ main {
     padding: 60px 40px 60px 0px;
     border: 2px solid $main-border;
     min-height: 100vh;
-    z-index: -100;
+    z-index: 100;
 }
 
 @media(max-width: 970px){
